--- a/sitemap.html
+++ b/sitemap.html
@@ -51,6 +51,9 @@
         <li>
             <a href="./brand.html">Страница бренда</a>
         </li>
+        <li>
+            <a href="./actions.html">Страница акций</a>
+        </li>
     </ul>
 </body>
 </html>
