--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
                     <nav class="header__top-nav">
                         <ul class="header__top-list">
                             <li class="header__top-item">
-                                <a class="header__top-link actions" href="./sale.html">
+                                <a class="header__top-link actions" href="./actions.html">
                                     Акции
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
