Изменил подключение swiper

--- a/personal.html
+++ b/personal.html
@@ -639,7 +639,8 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и сушильные
+                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и
+                                            сушильные
                                             машины</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
@@ -699,7 +700,8 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для уборки</a>
+                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для
+                                            уборки</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -1539,7 +1541,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                
+
                                 <div class="promo-banner" style="background-image: url('./img/catalog-banner.png');">
                                     <p class="catalog-popup__categories-text">
                                         Не можете выбрать?
@@ -1727,7 +1729,8 @@
                                     </p>
                                 </div>
                                 <div class="personal__tile skeleton">
-                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_656_6157)">
                                             <path
                                                 d="M83.249 76.2023L74.1192 67.0779V1.54155C74.1192 0.690237 73.4283 0 72.5762 0H26.2869C26.2575 0 26.2296 0.0150542 26.2002 0.0173124C26.0586 0.0240868 25.9185 0.0526899 25.7851 0.100111C25.7399 0.11366 25.6947 0.129466 25.651 0.148284C25.4792 0.22205 25.3225 0.326677 25.1884 0.456144L6.67269 18.9548C6.54311 19.0858 6.43838 19.2386 6.3638 19.4064C6.34195 19.4546 6.32989 19.502 6.31256 19.5517C6.26811 19.6797 6.24174 19.8129 6.23421 19.9476C6.23421 19.9815 6.21387 20.0109 6.21387 20.0447V78.6193C6.21387 79.4706 6.90474 80.1608 7.75684 80.1608H61.0235L70.1547 89.2792C71.8838 91.0262 74.2427 92.0063 76.7019 92.0002C80.45 92.0033 83.8298 89.7481 85.2636 86.2879C86.6965 82.8284 85.9009 78.8466 83.2474 76.2023H83.249ZM70.1691 84.9398L46.1527 60.9531L54.8937 52.2187L78.9025 76.2144L70.1691 84.9398ZM44.8471 57.8964L42.7548 48.8269L51.8342 50.9157L44.8471 57.8964ZM24.7439 5.26296V18.4987H11.496L24.7439 5.26296ZM9.31414 77.0777V21.5818H26.2869C27.139 21.5818 27.8299 20.8915 27.8299 20.0402V3.08311H71.0332V63.9933L55.9862 48.9489L55.9688 48.9383C55.8415 48.8171 55.6946 48.7185 55.5341 48.647C55.4904 48.6282 55.449 48.6147 55.4061 48.5989C55.3518 48.5748 55.2968 48.5537 55.2403 48.5356L41.0454 45.2681C40.5263 45.1477 39.9823 45.3035 39.6056 45.6791C39.2289 46.0554 39.0737 46.5997 39.1935 47.1175L42.4648 61.3001C42.4829 61.3566 42.504 61.4123 42.5281 61.4665C42.5439 61.5079 42.5559 61.5493 42.5763 61.5914C42.6471 61.754 42.7473 61.903 42.8709 62.0303L42.8784 62.043L57.936 77.0777H9.31414ZM81.0626 87.1054C79.9083 88.2623 78.3405 88.9126 76.7056 88.9126C75.0707 88.9126 73.5029 88.2623 72.3494 87.1054L73.0757 86.3782L81.0761 78.3867C82.2341 79.5414 82.8843 81.11 82.8813 82.7449C82.879 84.3798 82.2243 85.9462 81.0626 87.0978V87.1054Z"
@@ -1753,7 +1756,8 @@
                                     </p>
                                 </div>
                                 <div class="personal__tile skeleton">
-                                    <svg width="100" height="100" viewBox="0 0 110 110" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 110 110" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M90.75 10.1406H26.8125C25.9531 10.1406 25.3516 10.8281 25.2656 11.6016V17.0156H16.7578C15.8984 17.0156 15.2969 17.7031 15.2109 18.5625V98.3125C15.2109 99.1719 15.8984 99.8594 16.7578 99.8594H80.7812C81.6406 99.8594 82.2422 99.1719 82.3281 98.3984V92.9844H90.8359C91.6953 92.9844 92.3828 92.2969 92.3828 91.4375V11.6875C92.2109 10.8281 91.6094 10.1406 90.75 10.1406ZM79.2344 96.8516H18.3906V20.1094H59.7266V33.9453C59.7266 34.8047 60.4141 35.4062 61.1875 35.4922H79.2344V96.8516ZM76.3984 32.4844H62.7344V21.6563L76.3984 32.4844ZM89.2031 89.8906H82.2422V33.9453C82.2422 33.5156 82.0703 33.0859 81.6406 32.7422L62.1328 17.4453C61.875 17.2734 61.5312 17.1016 61.1875 17.1016H28.3594V13.1484H89.2891L89.2031 89.8906Z"
                                             fill="#537CE5" />
@@ -1778,7 +1782,8 @@
                                     </p>
                                 </div>
                                 <a class="personal__tile-link skeleton" href="./cart.html">
-                                    <svg width="100" height="100" viewBox="0 0 119 119" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 119 119" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M103.474 39.6978H95.5718L69.3546 13.9454C68.5179 13.1087 67.1233 13.1087 66.2866 13.9454C65.4499 14.7821 65.4499 16.1767 66.2866 17.0134L89.3429 39.6048H29.6569L52.7132 17.0134C53.5499 16.1767 53.5499 14.7821 52.7132 13.9454C51.8765 13.1087 50.4819 13.1087 49.6452 13.9454L23.428 39.6978H15.5257C14.3171 39.6978 13.2944 40.7204 13.2944 41.929V55.1306C13.2944 56.3392 14.3171 57.3618 15.5257 57.3618H18.0358L24.3577 103.846C24.5437 104.962 25.4733 105.706 26.496 105.706H92.5038C93.6194 105.706 94.5491 104.869 94.6421 103.846L100.964 57.3618H103.474C104.683 57.3618 105.705 56.3392 105.705 55.1306V41.929C105.705 40.7204 104.683 39.6978 103.474 39.6978ZM90.5515 101.336H28.4483L22.4054 57.3618H96.5944L90.5515 101.336ZM101.336 52.8993H99.1046H19.8952H17.664V44.0673H101.336V52.8993Z"
                                             fill="#537CE5" />
@@ -1797,7 +1802,8 @@
                                     </p>
                                 </a>
                                 <a class="personal__tile-link skeleton" href="./favorites.html">
-                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M46.0003 88.3191L7.78884 50.0806C2.77035 44.9282 0 38.1537 0 31.0138C0 15.9744 12.2055 3.76025 27.2341 3.76025C33.977 3.76025 40.7207 6.68966 46.0003 11.842C51.2799 6.68966 58.0227 3.76025 64.7656 3.76025C79.7943 3.76025 91.9997 15.9744 91.9997 31.0138C91.9997 38.1798 89.2294 44.9543 84.2117 50.0806L46.0003 88.3191ZM27.2341 7.94479C14.5057 7.94479 4.18156 18.2762 4.18156 31.0138C4.18156 37.0817 6.53384 42.8095 10.7682 47.1511L46.0003 82.4082L81.2583 47.1251C85.4919 42.8095 87.8182 37.0817 87.8182 31.0138C87.8182 18.3023 77.4941 7.94479 64.7656 7.94479C58.5457 7.94479 52.2469 10.9784 47.5684 16.2618L46.0003 18.0142L44.4321 16.2618C39.7536 10.9784 33.4548 7.94479 27.2341 7.94479Z"
                                             fill="#537CE5" />
@@ -1807,7 +1813,8 @@
                                     </p>
                                 </a>
                                 <a class="personal__tile-link skeleton" href="./contacts.html">
-                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 92 92" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_656_6193)">
                                             <path
                                                 d="M92 16.6208C92 13.4009 89.3803 10.7812 86.1602 10.7812H83.7838C82.9089 4.69396 77.6615 0 71.3362 0H20.664C13.7283 0 8.08591 5.64253 8.08591 12.5781V15.9023H5.83982C2.61965 15.9023 0 18.5221 0 21.7421C0 24.9621 2.61965 27.5819 5.83982 27.5819H8.08591V32.0741H5.83982C2.61965 32.0741 0 34.6939 0 37.9139C0 41.1339 2.61965 43.7537 5.83982 43.7537H8.08591V48.2459H5.83982C2.61965 48.2459 0 50.8657 0 54.0857C0 57.3057 2.61965 59.9255 5.83982 59.9255H8.08591V64.4177H5.83982C2.61965 64.4177 0 67.0376 0 70.2575C0 73.4775 2.61965 76.0974 5.83982 76.0974H8.08591V79.4216C8.08591 86.3571 13.7283 91.9996 20.664 91.9996H71.3362C77.6617 91.9996 82.9091 87.3057 83.7838 81.2184H86.1602C89.3803 81.2184 92 78.5988 92 75.3788V66.7536C92 65.1861 91.3792 63.761 90.3706 62.7109C91.3792 61.6608 92 60.2357 92 58.6681V50.0428C92 48.4752 91.3792 47.0501 90.3706 46C91.3792 44.9499 92 43.5248 92 41.9572V33.3319C92 31.7643 91.3792 30.3392 90.3706 29.2891C91.3792 28.239 92 26.8139 92 25.2464V16.6208ZM3.59374 21.7423C3.59374 20.5037 4.60124 19.4962 5.83982 19.4962H13.9259C15.1643 19.4962 16.1718 20.5037 16.1718 21.7423C16.1718 22.9809 15.1643 23.9884 13.9259 23.9884H5.83982C4.60124 23.9884 3.59374 22.9809 3.59374 21.7423ZM3.59374 37.9141C3.59374 36.6755 4.60124 35.668 5.83982 35.668H13.9259C15.1643 35.668 16.1718 36.6755 16.1718 37.9141C16.1718 39.1527 15.1643 40.1602 13.9259 40.1602H5.83982C4.60124 40.1602 3.59374 39.1527 3.59374 37.9141ZM3.59374 54.0859C3.59374 52.8473 4.60124 51.8398 5.83982 51.8398H13.9259C15.1643 51.8398 16.1718 52.8473 16.1718 54.0859C16.1718 55.3245 15.1643 56.332 13.9259 56.332H5.83982C4.60124 56.332 3.59374 55.3245 3.59374 54.0859ZM3.59374 70.2577C3.59374 69.0191 4.60124 68.0116 5.83982 68.0116H13.9259C15.1643 68.0116 16.1718 69.0191 16.1718 70.2577C16.1718 71.4963 15.1643 72.5038 13.9259 72.5038H5.83982C4.60124 72.5038 3.59374 71.4963 3.59374 70.2577ZM71.3362 88.4063H27.8515V17.9687C27.8515 16.9763 27.0468 16.1718 26.0546 16.1718C25.0624 16.1718 24.2577 16.9763 24.2577 17.9687V88.4061H20.664C15.71 88.4061 11.6796 84.3757 11.6796 79.4217V76.0975H13.9259C17.1459 76.0975 19.7655 73.4777 19.7655 70.2577C19.7655 67.0377 17.1459 64.4179 13.9259 64.4179H11.6796V59.9259H13.9259C17.1459 59.9259 19.7655 57.3061 19.7655 54.0861C19.7655 50.8661 17.1459 48.2463 13.9259 48.2463H11.6796V43.7543H13.9259C17.1459 43.7543 19.7655 41.1344 19.7655 37.9145C19.7655 34.6945 17.1459 32.0746 13.9259 32.0746H11.6796V27.5826H13.9259C17.1459 27.5826 19.7655 24.9628 19.7655 21.7428C19.7655 18.5228 17.1459 15.903 13.9259 15.903H11.6796V12.5781C11.6796 7.62411 15.71 3.59374 20.664 3.59374H71.3362C76.2902 3.59374 80.3205 7.62411 80.3205 12.5781V79.4219C80.3205 84.3759 76.2902 88.4063 71.3362 88.4063ZM88.4063 75.3792C88.4063 76.6176 87.3988 77.6251 86.1602 77.6251H83.9143V64.5079H86.1602C87.3988 64.5079 88.4063 65.5154 88.4063 66.7538V75.3792ZM88.4063 58.6681C88.4063 59.9065 87.3988 60.914 86.1602 60.914H83.9143V47.7969H86.1602C87.3988 47.7969 88.4063 48.8044 88.4063 50.0428V58.6681ZM88.4063 41.9572C88.4063 43.1956 87.3988 44.2031 86.1602 44.2031H83.9143V31.086H86.1602C87.3988 31.086 88.4063 32.0935 88.4063 33.3319V41.9572ZM88.4063 25.2462C88.4063 26.4846 87.3988 27.4921 86.1602 27.4921H83.9143V14.3749H86.1602C87.3988 14.3749 88.4063 15.3824 88.4063 16.6208V25.2462Z"
@@ -1830,7 +1837,8 @@
                                     </p>
                                 </a>
                                 <a class="personal__tile-link skeleton" href="./bonuses.html">
-                                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M58.3332 29.1665H43.7498C42.5998 29.1665 41.6665 30.0998 41.6665 31.2498V58.3332H31.2498C30.0998 58.3332 29.1665 59.2665 29.1665 60.4165C29.1665 61.5665 30.0998 62.4998 31.2498 62.4998H41.6665V68.7498C41.6665 69.8998 42.5998 70.8332 43.7498 70.8332C44.8998 70.8332 45.8332 69.8998 45.8332 68.7498V62.4998H56.2498C57.3998 62.4998 58.3332 61.5665 58.3332 60.4165C58.3332 59.2665 57.3998 58.3332 56.2498 58.3332H45.8332V54.1665H58.3332C65.2248 54.1665 70.8332 48.5582 70.8332 41.6665C70.8332 34.7748 65.2248 29.1665 58.3332 29.1665ZM58.3332 49.9998H45.8332V33.3332H58.3332C62.929 33.3332 66.6665 37.0707 66.6665 41.6665C66.6665 46.2623 62.929 49.9998 58.3332 49.9998Z"
                                             fill="#537CE5" />
@@ -2120,8 +2128,8 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
-                                aria-label="Написать в whatsapp">
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp"
+                                href="https://wa.me/79220328123" aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
                         </div>
@@ -2385,7 +2393,8 @@
                             <label for="questionCheckbox"></label>
                             <p>
                                 Отправляя форму Вы соглашаетесь с
-                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
+                                <a href="./confidence.html">обработкой персональных данных и политикой
+                                    конфеденциальности</a>
                             </p>
                         </div>
 
@@ -2476,7 +2485,7 @@
             });
         });
     </script>
-
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
