--- a/404.html
+++ b/404.html
@@ -2588,6 +2588,7 @@
             });
         });
     </script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
