--- a/actions.html
+++ b/actions.html
@@ -2764,6 +2764,7 @@
             });
         });
     </script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
