--- a/auth.html
+++ b/auth.html
@@ -557,6 +557,7 @@
             });
         });
     </script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
