--- a/brand.html
+++ b/brand.html
@@ -10422,6 +10422,7 @@
     </script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/nouislider.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
