--- a/brands.html
+++ b/brands.html
@@ -2720,6 +2720,7 @@
             });
         });
     </script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 </html>
