--- a/cart.html
+++ b/cart.html
@@ -5303,6 +5303,7 @@
         });
     </script>
     <script src="./js/fancybox.umd.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
