--- a/catalog.html
+++ b/catalog.html
@@ -3057,6 +3057,7 @@
             });
         });
     </script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
