--- a/index.html
+++ b/index.html
@@ -7045,6 +7045,7 @@
     <script src="./js/splide.min.js"></script>
     <script src="./js/splide-extension-auto-scroll.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
