--- a/product.html
+++ b/product.html
@@ -5870,6 +5870,7 @@
     </script>
 
     <script src="./js/fancybox.umd.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
