Сверстал страницу акции

--- a/sitemap.html
+++ b/sitemap.html
@@ -54,6 +54,9 @@
         <li>
             <a href="./actions.html">Страница акций</a>
         </li>
+        <li>
+            <a href="./action.html">Страница акции</a>
+        </li>
     </ul>
 </body>
 </html>
