Правка сайтмапа; тест скриптов pdf

--- a/sitemap.html
+++ b/sitemap.html
@@ -57,6 +57,9 @@
         <li>
             <a href="./action.html">Страница акции</a>
         </li>
+        <li>
+            <a href="./contacts.html">Страница акции</a>
+        </li>
     </ul>
 </body>
 </html>
