Реализовал всплывающие уведомления

--- a/category.html
+++ b/category.html
@@ -10399,6 +10399,11 @@
 
     <div class="mobile-overlay">
     </div>
+    <div class="toast toast_message toast_default">
+        <div class="toast__body"></div>
+        <button class="toast__close" type="button"></button>
+      </div>
+
     <script>
         const allSkeletons = document.querySelectorAll('.skeleton');
         window.addEventListener('load', function () {
@@ -10407,6 +10412,7 @@
             });
         });
     </script>
+    <script src="./js/toast.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/nouislider.min.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
