--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />
+    <link rel="stylesheet" href="./css/toast.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=6faf799b-800e-493b-aa20-ed70db7ed655&lang=ru_RU"
@@ -2111,37 +2112,37 @@
             <div class="contacts">
                 <div class="container">
                     <div class="contacts__tabs">
-                        <button class="rect-btn rect-btn--contact-tab active">
+                        <button class="rect-btn rect-btn--contact-tab active skeleton">
                             Екатеринбург
                         </button>
-                        <button class="rect-btn rect-btn--contact-tab">
+                        <button class="rect-btn rect-btn--contact-tab skeleton">
                             Тюмень
                         </button>
                     </div>
                     <div class="contacts-city active">
                         <div class="contacts-city__inner">
                             <div class="contacts-city__info">
-                                <h3 class="contacts-city__title">
+                                <h3 class="contacts-city__title skeleton">
                                     Адреса шоурумов, складов и офисов:
                                 </h3>
                                 <div class="contacts-city__info-tabs">
-                                    <button class="rect-btn rect-btn--contact-info-tab active" data-map="ekb-office"
+                                    <button class="rect-btn rect-btn--contact-info-tab active skeleton" data-map="ekb-office"
                                         data-city="ekb">
                                         Офис
                                     </button>
-                                    <button class="rect-btn rect-btn--contact-info-tab" data-map="astroom"
+                                    <button class="rect-btn rect-btn--contact-info-tab skeleton" data-map="astroom"
                                         data-city="ekb">
                                         ИЦ ASTROOM
                                     </button>
-                                    <button class="rect-btn rect-btn--contact-info-tab" data-map="ema" data-city="ekb">
+                                    <button class="rect-btn rect-btn--contact-info-tab skeleton" data-map="ema" data-city="ekb">
                                         МЦ ЭМА
                                     </button>
-                                    <button class="rect-btn rect-btn--contact-info-tab" data-map="ekb-stock"
+                                    <button class="rect-btn rect-btn--contact-info-tab skeleton" data-map="ekb-stock"
                                         data-city="ekb">
                                         Центральный склад
                                     </button>
                                 </div>
-                                <div class="contacts-city__info-item active">
+                                <div class="contacts-city__info-item active skeleton">
                                     <div class="contacts-city__info-row">
                                         <img src="./img/icons/contacts-city.svg" alt="">
                                         <div class="contacts-city__info-address">
@@ -2322,11 +2323,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="contacts-city__maps">
+                            <div class="contacts-city__maps skeleton">
                                 <div class="contacts-city__map" data-map="ekb-office" id="ekb-map"></div>
                             </div>
                         </div>
-                        <div class="contacts-city__departments">
+                        <div class="contacts-city__departments skeleton">
                             <div class="contacts-city__departments-item">
                                 <h3 class="contacts-city__departments-title">
                                     Отдел рекламаций и претензий
@@ -2419,16 +2420,16 @@
                     <div class="contacts-city">
                         <div class="contacts-city__inner">
                             <div class="contacts-city__info">
-                                <h3 class="contacts-city__title">
+                                <h3 class="contacts-city__title skeleton">
                                     Адреса шоурумов, складов и офисов:
                                 </h3>
                                 <div class="contacts-city__info-tabs">
-                                    <button class="rect-btn rect-btn--contact-info-tab active" data-map="tyumen-office"
+                                    <button class="rect-btn rect-btn--contact-info-tab active skeleton" data-map="tyumen-office"
                                         data-city="tyumen">
                                         Офис
                                     </button>
                                 </div>
-                                <div class="contacts-city__info-item active">
+                                <div class="contacts-city__info-item active skeleton">
                                     <div class="contacts-city__info-row">
                                         <img src="./img/icons/contacts-city.svg" alt="">
                                         <div class="contacts-city__info-address">
@@ -2518,11 +2519,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="contacts-city__maps">
+                            <div class="contacts-city__maps skeleton">
                                 <div class="contacts-city__map" id="tyumen-map"></div>
                             </div>
                         </div>
-                        <div class="contacts-city__departments">
+                        <div class="contacts-city__departments skeleton">
                             <div class="contacts-city__departments-item">
                                 <h3 class="contacts-city__departments-title">
                                     Отдел рекламаций и претензий
@@ -2617,12 +2618,12 @@
             <div class="contacts-social">
                 <div class="container">
                     <div class="contacts-social__inner">
-                        <div class="contacts-social__left">
+                        <div class="contacts-social__left skeleton">
                             <h3>Подписывайтесь и первыми узнавайте о новых скидках и акциях</h3>
                             <p>Станьте частью сообщества ekrom</p>
                         </div>
                         <div class="contacts-social__right">
-                            <a class="contacts-social__link vk glass" href="https://vk.com/ekromshop">
+                            <a class="contacts-social__link vk glass skeleton" href="https://vk.com/ekromshop">
                                 <svg width="20" height="12" viewBox="0 0 20 12" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2631,7 +2632,7 @@
                                 </svg>
                                 <span>Вконтакте</span>
                             </a>
-                            <a class="contacts-social__link instagram glass" href="#">
+                            <a class="contacts-social__link instagram glass skeleton" href="#">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_582_3689)">
@@ -2653,7 +2654,7 @@
                                 </svg>
                                 <span>Сеть с картинками</span>
                             </a>
-                            <a class="contacts-social__link youtube glass" href="#">
+                            <a class="contacts-social__link youtube glass skeleton" href="#">
                                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2662,7 +2663,7 @@
                                 </svg>
                                 <span>YouTube</span>
                             </a>
-                            <a class="contacts-social__link telegram glass" href="https://t.me/ekromshop">
+                            <a class="contacts-social__link telegram glass skeleton" href="https://t.me/ekromshop">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2678,7 +2679,7 @@
             <div class="contacts-requisites">
                 <div class="container">
                     <div class="contacts-requisites__inner">
-                        <div class="contacts-requisites__item">
+                        <div class="contacts-requisites__item skeleton">
                             <h3>
                                 Банковские реквизиты
                             </h3>
@@ -2693,7 +2694,7 @@
                                 ОГРНИП 311667232200026
                             </p>
                         </div>
-                        <div class="contacts-requisites__item">
+                        <div class="contacts-requisites__item skeleton">
                             <h3>
                                 Юридический адрес
                             </h3>
@@ -2702,7 +2703,7 @@
                                 623700, Свердловская область, г. Екатеринбург, ул. Луначарского, 171, кв. 135
                             </p>
                         </div>
-                        <div class="contacts-requisites__item">
+                        <div class="contacts-requisites__item skeleton">
                             <h3>
                                 Фактический адрес
                             </h3>
@@ -3476,28 +3477,7 @@
             });
         });
     </script>
-    <!-- <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
-        integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        const pdf = new jspdf.jsPDF()
-        const form = document.querySelector('#complaintForm');
-        const btn = document.querySelector('.contacts-city__departments-download-template');
-        btn.addEventListener('click', function (event) {
-            event.preventDefault()
-
-        });
-        pdf.html(form, {
-            callback: function (pdf) {
-                // Save the PDF
-                pdf.save('sample-document.pdf');
-            },
-            x: 15,
-            y: 15,
-        });
-    </script> -->
+    <script src="./js/toast.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
