--- a/favorites.html
+++ b/favorites.html
@@ -8543,6 +8543,7 @@
             });
         });
     </script>
+    <script src="./js/toast.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
