--- a/product.html
+++ b/product.html
@@ -5868,7 +5868,7 @@
             });
         });
     </script>
-
+    <script src="./js/toast.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/script.js" type="module"></script>
