--- a/search.html
+++ b/search.html
@@ -11873,6 +11873,7 @@
             });
         });
     </script>
+    <script src="./js/toast.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/nouislider.min.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
