--- a/action.html
+++ b/action.html
@@ -2042,7 +2042,7 @@
                                 </div>
 
                             </div>
-                            <div class="products__main tiles active">
+                            <div class="products__main action tiles active">
                                 <div class="product-card">
 
                                     <div class="product-card__img-box skeleton">
