--- a/contacts.html
+++ b/contacts.html
@@ -155,7 +155,7 @@
                     }
                     return coords
                 })
-                map.setCenter(coords, 17, { duration: 500 })
+                map.setCenter(coords, 17, {duration: 500})
             }
         }
 
@@ -2632,7 +2632,7 @@
                                 </svg>
                                 <span>Вконтакте</span>
                             </a>
-                            <a class="contacts-social__link instagram glass skeleton" href="#">
+                            <a class="contacts-social__link instagram glass skeleton" href="https://instagram.com/ekromtech?igshid=MzRlODBiNWFlZA==">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_582_3689)">
@@ -2654,7 +2654,7 @@
                                 </svg>
                                 <span>Сеть с картинками</span>
                             </a>
-                            <a class="contacts-social__link youtube glass skeleton" href="#">
+                            <a class="contacts-social__link youtube glass skeleton" href="https://www.youtube.com/@user-gk8ym5vm5k">
                                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
